--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -4,3 +4,30 @@ body{
 .ml-n {
     margin-left: -26.5rem ;
 }
+#column-1{
+    padding-left: 35%; 
+    padding-top: 20%; 
+    padding-bottom: 20%
+}
+#column-1>i{
+    font-size:25px; 
+    color: rgb(14,37,59)
+}
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
