--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -22,12 +22,15 @@ body{
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #d6dee1;
+    background-color: #FFFFFF;
     border-radius: 20px;
     border: 6px solid transparent;
     background-clip: content-box;
   }
   
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #a8bbbf;
+    background-color: rgb(14,37,59);
+  }
+  ::-webkit-scrollbar-corner {
+    background: rgba(0,0,0,0);
   }
